--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
 django-phonenumber-field[phonenumbers]
-python -m pip install django-tailwind
-pip install django
+install django-tailwind
+install django
