protecting secret keys

--- a/RADJANGO/.env
+++ b/RADJANGO/.env
@@ -2,5 +2,7 @@
 
 ENVIRONMENT='development' # Set to 'production' for production environment
 SECRET_KEY=django-insecure-)4t6x9!!5==5p#jh+wy*&zkl=v0+2(c+za6&j5(^o5w4bvlqw1
+TWILIO_ACCOUNT_SSID=ACa0f31a5db56256de113c74755fb0b0f8
+TWILIO_AUTH_TOKEN=5e9d4c48ebfa39a84ce95329c2c571af
 EMAIL_ADDRESS='sheriffsakara41@gmail.com'
 EMAIL_PASSWORD='ocoblbrftqbwgvmm'
