--- a/requirements.txt
+++ b/requirements.txt
@@ -12,4 +12,4 @@ pyotp
 Pillow
 xhtml2pdf #for PDF generation
 django-axes #for login attempts
-django-envrion #for environment variables
+django-envrion=0.120 #for environment variables
