changin environment from development to production

--- a/RADJANGO/.env
+++ b/RADJANGO/.env
@@ -1,5 +1,5 @@
 
-ENVIRONMENT=development # Set to 'production' for production environment
+ENVIRONMENT=production # Set to 'production' for production environment
 SECRET_KEY=django-insecure-)4t6x9!!5==5p#jh+wy*&zkl=v0+2(c+za6&j5(^o5w4bvlqw1
 EMAIL_ADDRESS=sheriffsakara41@gmail.com
 EMAIL_PASSWORD=ocoblbrftqbwgvmm
